--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background-color: #f4f4f4;
+            background-color: #fcf8e3; /* Slight yellow tint: #fcf8e3 */
         }
 
         .container {
@@ -31,7 +31,7 @@
         }
 
         h1 {
-            color: #007BFF;
+            color: #007BFF; /* Blue: #007BFF */
             margin-bottom: 20px;
             border-bottom: 2px solid #f0f0f0;
             padding-bottom: 10px;
@@ -57,21 +57,22 @@
         }
 
         input[type="text"]:hover, input[type="text"]:focus {
-            border-color: #007BFF;
+            border-color: #007BFF; /* Blue: #007BFF */
         }
 
         input[type="submit"] {
             padding: 10px 15px;
-            background-color: #007BFF;
+            background-color: #007BFF; /* Blue: #007BFF */
             color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease; /* Added box-shadow transition */
+            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); /* Added small shadow */
         }
 
         input[type="submit"]:hover {
-            background-color: #0056b3;
+            background-color: #0056b3; /* Darker Blue: #0056b3 */
             transform: translateY(-2px);
         }
 
@@ -93,8 +94,7 @@
 
 <body>
     <div class="container">
-        <h1>Hello Dosto, 
-            Let's make a 2 Tier Application with Flask and MYSQL!</h1>
+        <h1>Here's my two-tier Application deployed using Docker!</h1>
         {% for message in messages %}
             <p>{{ message[0] }}</p>
         {% endfor %}
